--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 @media only screen and (max-width: 450px) {
   .wrapperScroll {
     width: 100%;
-    height: 200px;  
+    height: 200px;
   }
 }
 
@@ -51,4 +51,25 @@
 
 .wrapperScroll:hover .imgScroll {
   object-position: bottom center;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
